@@ -665,6 +665,13 @@ Examples from PEP8"
   :tag "py-closing-list-dedents-bos"
   :group 'python-mode)
 
+(defvar py-imenu-max-items 99)
+(defcustom py-imenu-max-items 99 
+ "Python-mode specific `imenu-max-items'" 
+
+:type 'number
+:group 'python-mode)
+
 (defcustom py-closing-list-space 1
   "Number of chars, closing parenthesis outdent from opening, default is 1 "
   :type 'number
@@ -10751,8 +10758,9 @@ of the first definition found."
       (push sublist index-alist))))
 
 (defun py--imenu-create-index-new (&optional beg end)
+  (interactive)
   "`imenu-create-index-function' for Python. "
-  (set (make-local-variable 'imenu-max-items) 99)
+  (set (make-local-variable 'imenu-max-items) py-imenu-max-items)
   (let ((orig (point))
         (beg (or beg (point-min)))
         (end (or end (point-max)))
@@ -25709,9 +25717,6 @@ See available customizations listed in files variables-python-mode at directory 
             '((< '(backward-delete-char-untabify (min py-indent-offset
                                                       (current-column))))
               (^ '(- (1+ (current-indentation)))))))
-  ;; (set (make-local-variable 'imenu-create-index-function) 'py--imenu-create-index-function)
-  (setq imenu-create-index-function 'py--imenu-create-index-function)
-
   (and py-guess-py-install-directory-p (py-set-load-path))
   ;;  (unless gud-pdb-history (when (buffer-file-name) (add-to-list 'gud-pdb-history (buffer-file-name))))
   (and py-autopair-mode
@@ -25762,8 +25767,11 @@ See available customizations listed in files variables-python-mode at directory 
   (when (and py--imenu-create-index-p
              (fboundp 'imenu-add-to-menubar)
              (ignore-errors (require 'imenu)))
-    (setq imenu--index-alist (funcall py--imenu-create-index-function))
-    ;; (setq imenu--index-alist (py--imenu-create-index-new))
+  (setq imenu-create-index-function 'py--imenu-create-index-function)
+  (setq imenu--index-alist (funcall py--imenu-create-index-function))
+  ;; fallback
+  (unless imenu--index-alist
+    (setq imenu--index-alist (py--imenu-create-index-new)))
     ;; (message "imenu--index-alist: %s" imenu--index-alist)
     (imenu-add-to-menubar "PyIndex"))
   ;; add the menu
